p2/dep1-save.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-un
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-un
---
apiVersion: v1
kind: Service
metadata:
  name: hello-deux
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-deux
---
apiVersion: v1
kind: Service
metadata:
  name: hello-trois
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-trois
