p2/dep-all-save.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - host: app1.com # by host header
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-un
                port:
                  number: 80
    - host: app2.com # by host header
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-deux
                port:
                  number: 80
    - host: app3.com # by host header
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-trois
                port:
                  number: 80
